--- a/default/props.conf
+++ b/default/props.conf
@@ -35,7 +35,7 @@ EXTRACT-win-dns-analytical-zonescope-zone-rcode = ZoneScope=(?<zone_scope>[^;]+)
 EXTRACT-win-dns-analytical-dnssec-rcode = DNSSEC=(?<dnssec>\d+);\s+RCODE=(?<rcode>\d+);
 EXTRACT-win-dns-analytical-packet-data = PacketData=(?<packet_data>[\s\S]+)
 EXTRACT-win-dns-analytical-vendor-product = ProviderName\s+:\s+(?<vendor>\w+)-\w+-(?<product>\w+)
-EXTRACT-win-dns-analytical-event_id = Id\s+:\s+(?.*)\s+Message
+EXTRACT-win-dns-analytical-event_id = Id\s+:\s+(?:.*)\s+Message
 FIELDALIAS-src-dest = src AS src_ip dest AS dest_ip
 FIELDALIAS-reply_code = rcode AS reply_code
 LOOKUP-win_dns_qtype_lookup = win_dns_qtype Value AS query_code OUTPUTNEW Meaning AS record_meaning TYPE AS record_type
